# gym-winback-prediction

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/: business_impact.json  calibration_curve.html  cohort_winback.html  confusion_matrix.html  gains_lift.html  model_performance.json  offer_effectiveness.html  pr_curve.html  profit_curve.html  roc_curve.html  score_distribution.html  shap_beeswarm.html  shap_importance.html  shap_summary.json
configs/: config.yaml
data/sample/: scoring_sample.csv
docs/: data_generation.md  feature_dictionary.md
experiments/: index.jsonl
models/: metadata.json  model.joblib
src/gym_winback/: __init__.py  business.py  cli.py  config.py  evaluate.py  explain.py  features.py  logging_utils.py  models.py  plotting.py  predict.py  schemas.py  simulation.py  tracking.py  train.py
tests/: conftest.py  test_business.py  test_config.py  test_features.py  test_inference.py  test_schemas.py  test_simulation.py  test_tracking.py
